--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "crypto-js": "^4.1.0"
+    "crypto-js": "^4.1.0",
+    "node-fetch": "^1.0.0"
   }
 }
